@@ -7,5 +7,8 @@ Feature: Handling javascript events
     When I ask to compute "2 + 2"
     Then I should be able to wait for the answer "4"
 
-
+  Scenario: Waiting for ajax to complete with Prototype
+    Given I am on the Prototype example page
+    When I ask to compute "2 + 2"
+    Then I should be able to wait for the answer "4"
 
