@@ -7,16 +7,16 @@ class JavascriptPage
 
 end
 
-def start_server  
-  @server = AjaxTestEnvironment.new
-  @server.run
-end
-
 Given /^I am on jQuery example page$/ do
-  start_server
   PageObject.javascript_framework = :jquery
   @page = JavascriptPage.new(@browser)
   @page.navigate_to "http://localhost:4567/jquery.html"
+end
+
+Given /^I am on the Prototype example page$/ do
+  PageObject.javascript_framework = :prototype
+  @page = JavascriptPage.new(@browser)
+  @page.navigate_to "http://localhost:4567/prototype.html"
 end
 
 When /^I ask to compute "([^\"]*)"$/ do |expression|
@@ -27,5 +27,4 @@ end
 Then /^I should be able to wait for the answer "([^\"]*)"$/ do |answer|
   @page.wait_for_ajax
   @page.results.should == answer
-  @server.stop
 end
