@@ -4,7 +4,6 @@ class AjaxTestEnvironment
   def run
     Thread.abort_on_exception = true
     @example_app = Thread.new { SampleApp.start("127.0.0.1", 4567) }
-
     poller = Selenium::WebDriver::SocketPoller.new("127.0.0.1", 4567, 60)
     unless poller.connected?
       raise "timed out waiting for SampleApp to launch"
@@ -17,4 +16,11 @@ class AjaxTestEnvironment
     @example_app.kill
   end
 
+end
+
+@server = AjaxTestEnvironment.new
+@server.run
+
+at_exit do
+  @server.stop
 end
